# acta

./: .env.example  .eslintrc.cjs  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.server.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: ai-api.md  sync-design.md
mcp/: index.ts
scripts/: gen-source-icon.mjs  update_students_2026.mjs
server/: driver-node.ts  index.ts  paths.ts
server/pg-api/: .env.example  index.js  package-lock.json  package.json
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_archive.sql  0003_patents_projects.sql  0004_review_url.sql  0005_review_type.sql  0006_ideas.sql  0007_sparks.sql  0008_review_invite_links.sql  0009_notes.sql  0010_reports.sql  0011_notes_folder.sql  0012_funding.sql  0013_students.sql  0014_users.sql  0015_owner_id.sql  0016_groups.sql  0017_student_category.sql  0018_student_files.sql
src-tauri/src/: lib.rs  main.rs
src/ai/: claude.ts  ingest.ts  provider.ts
src/core/: actions.ts  schema.ts
src/db/: client.ts  mutate.ts  session.ts  types.ts
src/lib/: attachments.ts  backup.ts  confirm.ts  dates.ts  external.ts  i18n.ts  ids.ts  listview.ts  platform.ts  tabs.ts  theme.ts  titlebar.ts  useFileDrop.ts
src/routes/: routes.tsx
src/store/: auth.ts  breadcrumb.ts  dashboard.ts  dockPanel.ts  modules.ts  pageHeader.ts  refresh.ts  sidebar.ts  (+1 more)
(+86 files in other folders)
